--- a/openstack/taskflow/taskflow.spec.j2
+++ b/openstack/taskflow/taskflow.spec.j2
@@ -33,6 +33,7 @@ BuildRequires:  {{ py2pkg('psycopg2') }}
 BuildRequires:  {{ py2pkg('pydotplus') }}
 BuildRequires:  {{ py2pkg('redis') }}
 BuildRequires:  {{ py2pkg('retrying') }}
+BuildRequires:  {{ py2pkg('stevedore') }}
 BuildRequires:  {{ py2pkg('testscenarios') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 BuildRequires:  {{ py2pkg('zake') }}
