Add Group for futurist
Change-Id: I7800301de82a9eadd2609b802e809b849a1ddbac

--- a/openstack/futurist/futurist.spec.j2
+++ b/openstack/futurist/futurist.spec.j2
@@ -4,6 +4,7 @@ Version:        0.18.0
 Release:        0
 Summary:        Backport of the concurrent.futures package from Python 3.2
 License:        {{ license('Apache-2.0') }}
+Group:          Development/Languages/Python
 Url:            http://launchpad.net/futurist
 Source0:        https://pypi.io/packages/source/f/%{sname}/%{sname}-%{version}.tar.gz
 BuildRequires:  openstack-macros
