--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -1,5 +1,6 @@
 %global sname tempest
 Name:           {{ py2name('Tempest') }}
+Epoch:          {{ epoch('Tempest') }}
 Version:        12.2.0
 Release:        0
 Summary:        The OpenStack Integration Test Suite
