Use %autosetup instead of %setup
This simplifies the process of adding patches to spec files.
Adding a patch is then just adding a %patch source and %Autosetup
will apply the patches in order.

Also add a speccheck for that case.

Change-Id: Ic4a925d800f3816b6cea865f779aa455e5b5a592

--- a/openstack/Bareon/Bareon.spec.j2
+++ b/openstack/Bareon/Bareon.spec.j2
@@ -75,7 +75,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for OpenStack bareon tool.
 
 %prep
-%setup -q -n %{sname}-%{sversion}
+%autosetup -n %{sname}-%{sversion}
 
 %build
 %{py2_build}
