--- a/openstack/castellan/castellan.spec.j2
+++ b/openstack/castellan/castellan.spec.j2
@@ -43,7 +43,7 @@ Castellan is a generic Key Manager interface for OpenStack.
 This package contains the documentation
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
