--- a/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
+++ b/openstack/ceilometermiddleware/ceilometermiddleware.spec.j2
@@ -44,7 +44,7 @@ event data generation to be consumed by Ceilometer.
 This package contains documentation in HTML format.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
