--- a/openstack/django_openstack_auth/django_openstack_auth.spec.j2
+++ b/openstack/django_openstack_auth/django_openstack_auth.spec.j2
@@ -47,7 +47,7 @@ user against OpenStack's Keystone Identity API.
 This package contains documentation in HTML format.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
