--- a/openstack/futurist/futurist.spec.j2
+++ b/openstack/futurist/futurist.spec.j2
@@ -35,7 +35,7 @@ Backport of the concurrent.futures package from Python 3.2.
 Useful additions to futures from the future.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
