--- a/openstack/keystoneauth1/keystoneauth1.spec.j2
+++ b/openstack/keystoneauth1/keystoneauth1.spec.j2
@@ -55,7 +55,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for OpenStack authenticating tools.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
