--- a/openstack/microversion_parse/microversion_parse.spec.j2
+++ b/openstack/microversion_parse/microversion_parse.spec.j2
@@ -27,7 +27,7 @@ This package contains thedocumentation for OpenStack microversion
 headers parsing library.
 
 %prep
-%setup -q -n microversion_parse-%{version}
+%autosetup -n microversion_parse-%{version}
 
 %build
 %{py2_build}
