--- a/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
+++ b/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
@@ -31,7 +31,7 @@ BuildArch:      noarch
 Tools used by the OpenStack Documentation Project.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
