--- a/openstack/os-api-ref/os-api-ref.spec.j2
+++ b/openstack/os-api-ref/os-api-ref.spec.j2
@@ -39,7 +39,7 @@ of collapsing sections for REST methods and javascript controls to
 expand / collapse all sections.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
