--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -52,7 +52,7 @@ Documentation for the os-client-config library.
 %endif
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
