--- a/openstack/os-vif/os-vif.spec.j2
+++ b/openstack/os-vif/os-vif.spec.j2
@@ -51,7 +51,7 @@ Documentation for a library for plugging and unplugging virtual interfaces
 in OpenStack.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
