--- a/openstack/oslo.cache/oslo.cache.spec.j2
+++ b/openstack/oslo.cache/oslo.cache.spec.j2
@@ -44,7 +44,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the OpenStack Oslo cache library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
