--- a/openstack/oslo.concurrency/oslo.concurrency.spec.j2
+++ b/openstack/oslo.concurrency/oslo.concurrency.spec.j2
@@ -50,7 +50,7 @@ external processes.
 This package contains the documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
