--- a/openstack/oslo.messaging/oslo.messaging.spec.j2
+++ b/openstack/oslo.messaging/oslo.messaging.spec.j2
@@ -85,7 +85,7 @@ of different messaging transports.
 This package contains the documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
