--- a/openstack/oslo.middleware/oslo.middleware.spec.j2
+++ b/openstack/oslo.middleware/oslo.middleware.spec.j2
@@ -54,7 +54,7 @@ for limiting size/connection etc.
 This package contains the documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
