--- a/openstack/oslo.reports/oslo.reports.spec.j2
+++ b/openstack/oslo.reports/oslo.reports.spec.j2
@@ -43,7 +43,7 @@ framework, known as the "guru meditation report".
 This package contains the documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
