--- a/openstack/oslotest/oslotest.spec.j2
+++ b/openstack/oslotest/oslotest.spec.j2
@@ -35,7 +35,7 @@ The Oslo Test framework provides common fixtures, support for debugging, and
 better support for mocking results.
 
 %prep
-%setup -q -n oslotest-%{version}
+%autosetup -n oslotest-%{version}
 
 %build
 %{py2_build}
