--- a/openstack/pycadf/pycadf.spec.j2
+++ b/openstack/pycadf/pycadf.spec.j2
@@ -35,7 +35,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the DMTF Cloud Audit (CADF) data model.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
