--- a/openstack/python-cloudkittyclient/python-cloudkittyclient.spec.j2
+++ b/openstack/python-cloudkittyclient/python-cloudkittyclient.spec.j2
@@ -49,7 +49,7 @@ It provides a Python API (the cloudkittyclient module).
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
