--- a/openstack/python-congressclient/python-congressclient.spec.j2
+++ b/openstack/python-congressclient/python-congressclient.spec.j2
@@ -65,7 +65,7 @@ is designed to work with any policy and any cloud service.
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %{py2_build}
