--- a/openstack/python-designateclient/python-designateclient.spec.j2
+++ b/openstack/python-designateclient/python-designateclient.spec.j2
@@ -43,7 +43,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the OpenStack DNS as a Service - Client.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
