--- a/openstack/python-dracclient/python-dracclient.spec.j2
+++ b/openstack/python-dracclient/python-dracclient.spec.j2
@@ -37,7 +37,7 @@ Each implements 100% of the OpenStack Drac API.
 This package contains auto-generated documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
