--- a/openstack/python-heatclient/python-heatclient.spec.j2
+++ b/openstack/python-heatclient/python-heatclient.spec.j2
@@ -56,7 +56,7 @@ the OpenStack Heat API.
 This package contains auto-generated documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
