--- a/openstack/python-neutronclient/python-neutronclient.spec.j2
+++ b/openstack/python-neutronclient/python-neutronclient.spec.j2
@@ -60,7 +60,7 @@ Client library and command line utility for interacting with OpenStack
 Neutron's API.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
