--- a/openstack/python-tackerclient/python-tackerclient.spec.j2
+++ b/openstack/python-tackerclient/python-tackerclient.spec.j2
@@ -52,7 +52,7 @@ OpenStack tacker client.
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %{py2_build}
