--- a/openstack/python-zaqarclient/python-zaqarclient.spec.j2
+++ b/openstack/python-zaqarclient/python-zaqarclient.spec.j2
@@ -54,7 +54,7 @@ Documentation for the client library for interacting with Openstack
 Zaqar Queueing API.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
