--- a/openstack/stevedore/stevedore.spec.j2
+++ b/openstack/stevedore/stevedore.spec.j2
@@ -48,7 +48,7 @@ dynamically loaded extensions.
 This package contains documentation in HTML format.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
