--- a/openstack/taskflow/taskflow.spec.j2
+++ b/openstack/taskflow/taskflow.spec.j2
@@ -75,7 +75,7 @@ different backends to be used with OpenStack projects.
 This package contains the associated documentation.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
