--- a/openstack/yaql/yaql.spec.j2
+++ b/openstack/yaql/yaql.spec.j2
@@ -35,7 +35,7 @@ functions and can be extend even further with user-specified functions. YAQL is
 written in python and is distributed via PyPI.
 
 %prep
-%setup -q -n yaql-%{version}
+%autosetup -q -n yaql-%{version}
 
 %build
 %py2_build
