--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -72,7 +72,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the OpenStack Integration Test Suite.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
