--- a/openstack/aodhclient/aodhclient.spec.j2
+++ b/openstack/aodhclient/aodhclient.spec.j2
@@ -50,7 +50,7 @@ provides a Python API (the aodhclient module) and a command-line tool.
 This package contains auto-generated documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
