--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -48,7 +48,7 @@ other extensions.
 This package contains documentation files for %{name}.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %py2_build
