--- a/openstack/debtcollector/debtcollector.spec.j2
+++ b/openstack/debtcollector/debtcollector.spec.j2
@@ -54,7 +54,7 @@ future deprecations.
 This package contains documentation in HTML format.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
