--- a/openstack/keystonemiddleware/keystonemiddleware.spec.j2
+++ b/openstack/keystonemiddleware/keystonemiddleware.spec.j2
@@ -60,7 +60,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for Middleware for OpenStack Identity.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
