--- a/openstack/mox3/mox3.spec.j2
+++ b/openstack/mox3/mox3.spec.j2
@@ -40,7 +40,7 @@ enhancements have been made. The library was tested on Python version
 This package contains documentation in HTML format.
 
 %prep
-%setup -q -n %{pypi_name}-%{version}
+%autosetup -n %{pypi_name}-%{version}
 
 %build
 %py2_build
