--- a/openstack/os-win/os-win.spec.j2
+++ b/openstack/os-win/os-win.spec.j2
@@ -49,7 +49,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the Hyper-V library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
