--- a/openstack/oslo.config/oslo.config.spec.j2
+++ b/openstack/oslo.config/oslo.config.spec.j2
@@ -50,7 +50,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the oslo-config library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
