--- a/openstack/oslo.db/oslo.db.spec.j2
+++ b/openstack/oslo.db/oslo.db.spec.j2
@@ -61,7 +61,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the Oslo database handling library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
