--- a/openstack/oslo.log/oslo.log.spec.j2
+++ b/openstack/oslo.log/oslo.log.spec.j2
@@ -49,7 +49,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the oslo.log library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
