--- a/openstack/oslo.policy/oslo.policy.spec.j2
+++ b/openstack/oslo.policy/oslo.policy.spec.j2
@@ -39,7 +39,7 @@ BuildRequires:  {{ py2pkg('oslosphinx') }}
 Documentation for the Oslo Policy library.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
