--- a/openstack/python-k8sclient/python-k8sclient.spec.j2
+++ b/openstack/python-k8sclient/python-k8sclient.spec.j2
@@ -38,7 +38,7 @@ Client library for K8s built on the K8s API. It provides a Python API
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
