--- a/openstack/python-karborclient/python-karborclient.spec.j2
+++ b/openstack/python-karborclient/python-karborclient.spec.j2
@@ -56,7 +56,7 @@ Each implements 100% of the OpenStack Karbor API.
 This package contains auto-generated documentation.
 
 %prep
-%setup -q -n %{sname}-%{version}
+%autosetup -n %{sname}-%{version}
 
 %build
 %{py2_build}
