--- a/openstack/python-mistralclient/python-mistralclient.spec.j2
+++ b/openstack/python-mistralclient/python-mistralclient.spec.j2
@@ -45,7 +45,7 @@ Client library for Mistral built on the Mistral API. It provides a Python API
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
