--- a/openstack/python-oneviewclient/python-oneviewclient.spec.j2
+++ b/openstack/python-oneviewclient/python-oneviewclient.spec.j2
@@ -38,7 +38,7 @@ Client library for Oneview built on the Oneview API. It provides a Python API
 This package contains the documentation.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
