--- a/openstack/python-troveclient/python-troveclient.spec.j2
+++ b/openstack/python-troveclient/python-troveclient.spec.j2
@@ -56,7 +56,7 @@ Documentation for the client library for interacting with Openstack
 DBaaS API.
 
 %prep
-%setup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
