Add py_req_cleanup macro to all Python spec templates
Fedora specs use to remove requirements.txt and test-requirements.txt
during %prep, to prevent any attempt to download from PyPi while building.

We now have a py_req_cleanup macro in openstack-macros, so let's use it.
This will only change the outcome in packages using centos.

Change-Id: I7d7a27d4909990a9d26433cd65e799cae3af7904

--- a/openstack/Tempest/Tempest.spec.j2
+++ b/openstack/Tempest/Tempest.spec.j2
@@ -73,6 +73,7 @@ Documentation for the OpenStack Integration Test Suite.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
