--- a/openstack/cliff/cliff.spec.j2
+++ b/openstack/cliff/cliff.spec.j2
@@ -49,6 +49,7 @@ This package contains documentation files for %{name}.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %py2_build
