--- a/openstack/glance_store/glance_store.spec.j2
+++ b/openstack/glance_store/glance_store.spec.j2
@@ -70,6 +70,7 @@ Documentation for the Glance store library.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 # NOTE(toabctl): Can be removed when https://review.openstack.org/364532 is included
 sed -i -e 's/^\(html_last_updated_fmt.*\)\(git_cmd\)/\1"\/usr\/bin\/true"/' doc/source/conf.py
 
