--- a/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
+++ b/openstack/openstack-doc-tools/openstack-doc-tools.spec.j2
@@ -32,6 +32,7 @@ Tools used by the OpenStack Documentation Project.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %py2_build
