--- a/openstack/os-client-config/os-client-config.spec.j2
+++ b/openstack/os-client-config/os-client-config.spec.j2
@@ -53,6 +53,7 @@ Documentation for the os-client-config library.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
