--- a/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
+++ b/openstack/oslo.rootwrap/oslo.rootwrap.spec.j2
@@ -42,6 +42,7 @@ Documentation for the OpenStack %{sname} library.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
