--- a/openstack/oslo.vmware/oslo.vmware.spec.j2
+++ b/openstack/oslo.vmware/oslo.vmware.spec.j2
@@ -60,6 +60,7 @@ Documentation for OpenStack common VMware library.
 
 %prep
 %autosetup -n %{pypi_name}-%{version}
+%py_req_cleanup
 
 %build
 %py2_build
