--- a/openstack/pycadf/pycadf.spec.j2
+++ b/openstack/pycadf/pycadf.spec.j2
@@ -36,6 +36,7 @@ Documentation for the DMTF Cloud Audit (CADF) data model.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %py2_build
