--- a/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
+++ b/openstack/python-ceilometerclient/python-ceilometerclient.spec.j2
@@ -56,6 +56,7 @@ This package contains auto-generated documentation.
 
 %prep
 %autosetup -n %{name}-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
