--- a/openstack/osc-lib/osc-lib.spec.j2
+++ b/openstack/osc-lib/osc-lib.spec.j2
@@ -54,6 +54,7 @@ Documentation for the OpenStack client library.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %{__python2} setup.py build
