--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -56,6 +56,7 @@ This package contains documentation files for %{name}.
 
 %prep
 %autosetup -n oslo.versionedobjects-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
