--- a/openstack/pymod2pkg/pymod2pkg.spec.j2
+++ b/openstack/pymod2pkg/pymod2pkg.spec.j2
@@ -31,6 +31,7 @@ Documentation for python module name to package name map library.
 
 %prep
 %autosetup -n %{sname}-%{version}
+%py_req_cleanup
 
 %build
 %{py2_build}
