--- a/openstack/oslo.service/oslo.service.spec.j2
+++ b/openstack/oslo.service/oslo.service.spec.j2
@@ -1,6 +1,6 @@
 %global sname oslo.service
 Name:           {{ py2name('oslo.service') }}
-Version:        1.16.0
+Version:        1.17.0
 Release:        0
 Summary:        OpenStack oslo.service library
 License:        {{ license('Apache-2.0') }}
@@ -52,6 +52,7 @@ performing periodic operations, interacting with systemd, etc.
 Summary:        Documentation for OpenStack service library
 BuildRequires:  {{ py2pkg('Sphinx') }}
 BuildRequires:  {{ py2pkg('oslosphinx') }}
+BuildRequires:  {{ py2pkg('reno') }}
 
 %description doc
 oslo.service provides a framework for defining new long-running services using
