--- a/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
+++ b/openstack/oslo.versionedobjects/oslo.versionedobjects.spec.j2
@@ -1,5 +1,5 @@
 Name:           {{ py2name('oslo.versionedobjects') }}
-Version:        1.17.0
+Version:        1.18.0
 Release:        0
 Summary:        Oslo Versioned Objects library
 License:        {{ license('Apache-2.0') }}
@@ -9,6 +9,7 @@ Source0:        https://pypi.io/packages/source/o/oslo.versionedobjects/oslo.ver
 BuildRequires:  openstack-macros
 BuildRequires:  {{ py2pkg('devel') }}
 BuildRequires:  {{ py2pkg('iso8601') }}
+BuildRequires:  {{ py2pkg('jsonschema') }}
 BuildRequires:  {{ py2pkg('oslo.concurrency') }}
 BuildRequires:  {{ py2pkg('oslo.config') }}
 BuildRequires:  {{ py2pkg('oslo.context') }}
@@ -22,6 +23,7 @@ BuildRequires:  {{ py2pkg('pbr') }}
 BuildRequires:  {{ py2pkg('testtools') }}
 Requires:       {{ py2pkg('WebOb') }}
 Requires:       {{ py2pkg('iso8601') }}
+Requires:       {{ py2pkg('jsonschema') }}
 Requires:       {{ py2pkg('netaddr') }}
 Requires:       {{ py2pkg('oslo.concurrency') }}
 Requires:       {{ py2pkg('oslo.config') }}
