Fix %autosetup macros for yaql and solumclient
%autosetup does not use the -q option.

Change-Id: I014fd8989aab247bc1c15280ab3879c6842d7b1d

--- a/openstack/python-solumclient/python-solumclient.spec.j2
+++ b/openstack/python-solumclient/python-solumclient.spec.j2
@@ -60,7 +60,7 @@ Client library for Solum built on the Solum API. It provides a Python API
 This package contains the documentation.
 
 %prep
-%autosetup -q -n %{name}-%{version}
+%autosetup -n %{name}-%{version}
 
 %build
 %py2_build
